test/files/run/repl-paste-parse.check
Type in expressions for evaluation. Or try :help.

scala>
       val case = 9
           ^
repl-paste-parse.script:1: error: illegal start of simple pattern
:quit
